# port-inspector-cli

./: Cargo.toml  LICENSE  ReadMe.md
.circleci/: config.yml
src/: cli.rs  main.rs  port_inspector.rs
