[package]
name = "port-inspector"
description = "Inspects an ip address"
version = "0.1.0"
authors = ["Jayant Shrivastava <jshrivastava03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
assert_cmd = "1.0.2"